--- a/source/css/addons.css
+++ b/source/css/addons.css
@@ -22,8 +22,8 @@
 }
 
 .alert-danger {
-  background-color: #90130f;
-  border-color: #710f0c;
+  background-color: #b81913;
+  border-color: #a01611;
 }
 
 .close {
